Fixed menu's z-index order and cover whole screen

--- a/css/style.css
+++ b/css/style.css
@@ -42,25 +42,32 @@ Color shades 1-6, 1 lightest to 6 darkest
 }
 
 body {
-    margin: 2rem 1rem;
+    margin: 32px 16px;
     height: 2000px; 
     /*TEMPORARY!!*/
 }
 
 header {
-    background-color: rgb(225, 196, 196);
+    background-color: rgba(225, 196, 196, 0.368);
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    padding: 2rem 1rem 0.5rem 1rem;
 }
 
 .headings {
+    outline: 2px dotted red;
+    position: relative;
+}
+
+.headingWrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    outline: 2px dotted red;
+    background-color: rgba(255, 0, 0, 0.426);
+    position: relative;
+    z-index: 20;
+    padding: 32px 16px 16px 16px;
 }
 
 h1 {
@@ -79,13 +86,14 @@ nav {
     position: absolute;
     width: 100%;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
-    top: -600%; 
+    background-color: rgb(253, 255, 213);
+    top: -800%; 
     transition: all 0.6s ease-in-out;
+    z-index: 10;
 }
 
 .showMenu {
-    top: 60%; /*60% relative to the parent: .headings, thus let h1 come out*/
+    top: 100%; /* % relative to the parent: .headings, thus let h1 come out*/
 }
 
 nav ul {
@@ -100,21 +108,21 @@ nav ul li {
     font-size: 2rem;
     font-weight: 500;
     list-style: none;
-    padding: 16px 0px;
+    padding: 16px 16px;
 }
 
 nav ul li .seriesMenu {
     font-size: 1.75rem;
     /* outline: 2px solid blue; */
-    padding: 0.25rem 0 0.25rem 2rem;
+    padding: 4px 0 4px 32px;
 }
 
 h2 {
     font-family: 'Playfair Display', 'Georgia', serif;
     font-weight: 500;
     font-size: 1rem;
-    /* outline: 2px dotted red; */
-    margin: 24px 0 0 0;
+    outline: 2px dotted red;
+    padding: 24px 16px 8px 16px;
 }
 
 h3 {
@@ -122,7 +130,7 @@ h3 {
     font-weight: 400;
     font-size: 3rem;
     outline: 2px dotted red;
-    margin: 12rem 0 0 0;
+    margin: 30vh 0 0 0;
     display: flex;
     justify-content: center;
 }
